--- a/genindex.html
+++ b/genindex.html
@@ -206,6 +206,24 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/classhh_1_1collection_1_1counter.html#_CPPv4I0EN2hh10collection7counterE">hh::collection::counter (C++ class)</a>
+</li>
+      <li><a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4I0DpEN2hh9functools12call_counterE">hh::functools::call_counter (C++ class)</a>
+</li>
+      <li><a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4IDpEN2hh9functools12call_counter10call_countEyDpRR15INPUT_ARGUMENTS">hh::functools::call_counter::call_count (C++ function)</a>
+</li>
+      <li><a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4N2hh9functools12call_counter12call_counterE17function_signture">hh::functools::call_counter::call_counter (C++ function)</a>, <a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4N2hh9functools12call_counter12call_counterEPF11RETURN_TYPEDp9ARGUMENTSE">[1]</a>, <a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4N2hh9functools12call_counter12call_counterEv">[2]</a>
+</li>
+      <li><a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4N2hh9functools12call_counter17function_signtureE">hh::functools::call_counter::function_signture (C++ type)</a>
+</li>
+      <li><a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4N2hh9functools12call_counter8key_typeE">hh::functools::call_counter::key_type (C++ type)</a>
+</li>
+      <li><a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4IDpENK2hh9functools12call_counterclE11RETURN_TYPEDpRR15INPUT_ARGUMENTS">hh::functools::call_counter::operator() (C++ function)</a>
+</li>
+      <li><a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4NK2hh9functools12call_counter11total_callsEv">hh::functools::call_counter::total_calls (C++ function)</a>
+</li>
+      <li><a href="api/classhh_1_1functools_1_1call__counter.html#_CPPv4NK2hh9functools12call_counter14unique_entriesEv">hh::functools::call_counter::unique_entries (C++ function)</a>
+</li>
       <li><a href="api/variable_lru__cache_8hpp_1a00961e5bd178d521f0a53fccb9e550bd.html#_CPPv4N2hh9functools12DEFAULT_SIZEE">hh::functools::DEFAULT_SIZE (C++ member)</a>
 </li>
       <li><a href="api/classhh_1_1functools_1_1lru__cache.html#_CPPv4I0DpEN2hh9functools9lru_cacheE">hh::functools::lru_cache (C++ class)</a>
@@ -218,6 +236,8 @@
 </li>
       <li><a href="api/classhh_1_1functools_1_1lru__cache.html#_CPPv4N2hh9functools9lru_cache6d_funcE">hh::functools::lru_cache::d_func (C++ member)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/classhh_1_1functools_1_1lru__cache.html#_CPPv4N2hh9functools9lru_cache10d_max_sizeE">hh::functools::lru_cache::d_max_size (C++ member)</a>
 </li>
       <li><a href="api/classhh_1_1functools_1_1lru__cache.html#_CPPv4N2hh9functools9lru_cache19decayed_return_typeE">hh::functools::lru_cache::decayed_return_type (C++ type)</a>
@@ -228,8 +248,6 @@
 </li>
       <li><a href="api/classhh_1_1functools_1_1lru__cache.html#_CPPv4N2hh9functools9lru_cache9lru_cacheE18function_signaturej">hh::functools::lru_cache::lru_cache (C++ function)</a>, <a href="api/classhh_1_1functools_1_1lru__cache.html#_CPPv4N2hh9functools9lru_cache9lru_cacheEPF11RETURN_TYPEDp9ARGUMENTSEj">[1]</a>, <a href="api/classhh_1_1functools_1_1lru__cache.html#_CPPv4N2hh9functools9lru_cache9lru_cacheEv">[2]</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/classhh_1_1functools_1_1lru__cache.html#_CPPv4NK2hh9functools9lru_cache8max_sizeEv">hh::functools::lru_cache::max_size (C++ function)</a>
 </li>
       <li><a href="api/classhh_1_1functools_1_1lru__cache.html#_CPPv4IDpEN2hh9functools9lru_cacheclE11RETURN_TYPEDpRR15INPUT_ARGUMENTS">hh::functools::lru_cache::operator() (C++ function)</a>
